# trainig_tracking

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
angular/: package-lock.json  package.json
angular/src/: index.html  styles.css
angular/src/app/: Models.ts  app.module.ts
angular/src/app/components/about/: about.component.html
angular/src/app/components/add-skill/: add-skill.component.css  add-skill.component.html  add-skill.component.ts
angular/src/app/components/button/: button.component.css  button.component.ts
angular/src/app/components/footer/: footer.component.html
angular/src/app/components/header/: header.component.html  header.component.spec.ts  header.component.ts
angular/src/app/components/skill-item/: skill-item.component.css  skill-item.component.html  skill-item.component.ts
angular/src/app/components/skills/: skills.component.css  skills.component.html  skills.component.ts
angular/src/app/services/: api.service.ts  skills.service.ts  ui.service.ts
app/: pyproject.toml
app/api/: main.py  schemas.py  utils.py
app/api/crud/: crud.py  models.py  skills.py  utils.py
app/api/routers/: exercises.py  skills.py
client/: pyproject.toml
client/client/: client.py
client/notebooks/.ipynb_checkpoints/: playground-checkpoint.ipynb
db/: pyproject.toml  run_migrations.py
db/migrations/: 01_initial.rollback.sql  01_initial.sql
env/: .gitignore  example.env
notebooks/: playground.ipynb
shared_models/: pyproject.toml
shared_models/shared_models/: schemas.py
training_tracking/api/: main.py  schemas.py  utils.py
training_tracking/api/crud/: crud.py  models.py  utils.py
training_tracking/api/routers/: exercises.py  skills.py
training_tracking/db/migrations/: 01_initial.rollback.sql  01_initial.sql
