[tool.poetry]
name = "training-tracking"
version = "0.1.0"
description = ""
authors = ["Michael Meissner"]
license = "MIT"
readme = "README.md"
packages = [{include = "training_tracking"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
uvicorn = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
