[tool.poetry]
name = "training-tracking"
version = "0.1.0"
description = ""
authors = ["Michael Meißner <m.meissner@tum.de>"]
readme = "README.md"
packages = [{include = "training_tracking"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.3.0"
uvicorn = "^0.23.2"
fastapi = "^0.103.1"
sqlalchemy = "^2.0.20"
psycopg2-binary = "^2.9.7"


[tool.poetry.group.dev.dependencies]
yoyo-migrations = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
