[tool.poetry]
name = "training-tracking"
version = "0.1.0"
description = ""
authors = ["Michael Meissner"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
uvicorn = "^0.21.1"
psycopg2-binary = "^2.9.6"
sqlalchemy = "^2.0.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
