[tool.poetry]
name = "training-tracking-client"
version = "0.1.0"
description = ""
authors = ["Michael Meißner <m.meissner@tum.de>"]
license = "MIT"
readme = "README.md"
packages = [{include = "client"}]

[tool.poetry.dependencies]
python = "^3.11"
training-tracking-shared-models = {path = "../shared_models", develop = true}
loguru = "^0.7.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
widgetsnbextension = "^4.0.7"
ipywidgets = "^8.0.6"
voila = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
