[tool.poetry]
name = "training-tracking-shared-models"
version = "0.1.0"
description = ""
authors = ["Michael Meißner <m.meissner@tum.de>"]
readme = "README.md"
packages = [{include = "shared_models"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
